tests/snapshots/runtime_error_fixtures/base_fold_callback_arity.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/base_fold_callback_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
• 2 errors • examples/runtime_errors/base_fold_callback_arity.flx
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/runtime_errors/base_fold_callback_arity.flx:2:19
  |
2 |     let ignored = fold(#[1], 0, len)
  |                   ^^^^^^^^^^^^^^^^^^
  |                   ------------------ parameter 1 has type `Array<Int>`

  |                   ------------------ this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<Int>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E004]: Undefined Variable

I can't find a value named `len`.

  examples/runtime_errors/base_fold_callback_arity.flx:2:33
  |
2 |     let ignored = fold(#[1], 0, len)
  |                                 ^^^

Hint:
  Define it first: let len = ...;

Found 2 errors.
