tests/snapshots/runtime_error_fixtures/base_map_callback_arity.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/base_map_callback_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 17] Compiling  Assert
[ 2 of 17] Compiling  Debug
[ 3 of 17] Compiling  Array
[ 4 of 17] Compiling  List
[ 5 of 17] Compiling  Either
[ 6 of 17] Compiling  Eq
[ 7 of 17] Compiling  IO
[ 8 of 17] Compiling  Math
[ 9 of 17] Compiling  Num
[10 of 17] Compiling  Numeric
[11 of 17] Compiling  Option
[12 of 17] Compiling  Ord
[13 of 17] Compiling  Primops
[14 of 17] Compiling  Semigroup
[15 of 17] Compiling  Show
[16 of 17] Compiling  String
• 1 error • examples/runtime_errors/base_map_callback_arity.flx
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/runtime_errors/base_map_callback_arity.flx:2:19
  |
2 |     let ignored = map(#[1], concat)
  |                   ^^^^^^^^^^^^^^^^^
  |                   ----------------- parameter 1 has type `Array<Int>`

  |                   ----------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<Int>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.
