tests/snapshots/runtime_error_fixtures/boundary_arg_string_into_int.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/boundary_arg_string_into_int.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 19] Compiling  Add
[ 2 of 19] Compiling  Assert
[ 3 of 19] Compiling  Debug
[ 4 of 19] Compiling  Array
[ 5 of 19] Compiling  List
[ 6 of 19] Compiling  Either
[ 7 of 19] Compiling  Eq
[ 8 of 19] Compiling  IO
[ 9 of 19] Compiling  Math
[10 of 19] Compiling  Num
[11 of 19] Compiling  Numeric
[12 of 19] Compiling  Option
[13 of 19] Compiling  Ord
[14 of 19] Compiling  Primops
[15 of 19] Compiling  Semigroup
[16 of 19] Compiling  Show
[17 of 19] Compiling  String
[18 of 19] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/boundary_arg_string_into_int.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `typed_add`.

  examples/runtime_errors/boundary_arg_string_into_int.flx:8:11
  |
3 | fn typed_add(a: Int, b: Int) -> Int {
  | ----------------------------------- `typed_add` expects `Int` as the 1st parameter
4 |     a + b
5 | }
6 |
7 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
8 | typed_add(dynamic, 1)
  |           ^^^^^^^
  |           ------- this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 1st argument.
