tests/snapshots/runtime_error_fixtures/boundary_return_string_as_int.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/boundary_return_string_as_int.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 13] Compiling  Assert
[ 2 of 13] Compiling  Debug
[ 3 of 13] Compiling  Array
[ 4 of 13] Compiling  List
[ 5 of 13] Compiling  Either
[ 6 of 13] Compiling  IO
[ 7 of 13] Compiling  Math
[ 8 of 13] Compiling  Numeric
[ 9 of 13] Compiling  Option
[10 of 13] Compiling  Primops
[11 of 13] Compiling  String
[12 of 13] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/boundary_return_string_as_int.flx
error[E300]: Return Type Mismatch

The body of `bad` does not match its declared return type.

  examples/runtime_errors/boundary_return_string_as_int.flx:4:5
  |
3 | fn bad() -> Int {
  |             --- `bad` was declared to return `Int`
4 |     RuntimeErrors.BoundaryUnknown.dynamic_string()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     ---------------------------------------------- this expression has type `String`
   |
help: Change return type to `String`
   |
3 | fn bad() -> String {
  |             ~~~~~~

Note:
  declared return type: Int
  body type: String

Help:
  Return a `Int` value from `bad` or change its annotation.
