tests/snapshots/runtime_error_fixtures/division_by_zero_variable.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/division_by_zero_variable.flx
== vm ==
status: 0
stdout:
<empty>
stderr:
[ 1 of 17] Compiling  Assert
[ 2 of 17] Compiling  Debug
[ 3 of 17] Compiling  Array
[ 4 of 17] Compiling  List
[ 5 of 17] Compiling  Either
[ 6 of 17] Compiling  Eq
[ 7 of 17] Compiling  IO
[ 8 of 17] Compiling  Math
[ 9 of 17] Compiling  Num
[10 of 17] Compiling  Numeric
[11 of 17] Compiling  Option
[12 of 17] Compiling  Ord
[13 of 17] Compiling  Primops
[14 of 17] Compiling  Semigroup
[15 of 17] Compiling  Show
[16 of 17] Compiling  String
[17 of 17] Compiling  division_by_zero_variable
[cfg→vm] Running via CFG → bytecode VM backend...
