tests/snapshots/runtime_error_fixtures/either_boundary_string_into_either.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/either_boundary_string_into_either.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 19] Compiling  Add
[ 2 of 19] Compiling  Assert
[ 3 of 19] Compiling  Debug
[ 4 of 19] Compiling  Array
[ 5 of 19] Compiling  List
[ 6 of 19] Compiling  Either
[ 7 of 19] Compiling  Eq
[ 8 of 19] Compiling  IO
[ 9 of 19] Compiling  Math
[10 of 19] Compiling  Num
[11 of 19] Compiling  Numeric
[12 of 19] Compiling  Option
[13 of 19] Compiling  Ord
[14 of 19] Compiling  Primops
[15 of 19] Compiling  Semigroup
[16 of 19] Compiling  Show
[17 of 19] Compiling  String
[18 of 19] Compiling  BoundaryUnknown
• 1 error, 1 warning • examples/runtime_errors/either_boundary_string_into_either.flx
Warning: Redundant Match Arm

this arm is unreachable — earlier arms already cover it

  examples/runtime_errors/either_boundary_string_into_either.flx:7:9
  |
7 |         _ -> 0
  |         ^^^^^^


error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `unwrap_or_zero`.

  examples/runtime_errors/either_boundary_string_into_either.flx:12:16
   |
 3 | fn unwrap_or_zero(input: Either<String, Int>) -> Int {
   | ---------------------------------------------------- `unwrap_or_zero` expects `Either<String, Int>` as the 1st parameter
 4 |     match input {
 5 |         Left(_msg) -> 0,
... |
10 |
11 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
12 | unwrap_or_zero(dynamic)
   |                ^^^^^^^
   |                ------- this argument has type `String`

Note:
  expected argument type: Either<String, Int>
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Either<String, Int>` value as the 1st argument.

Found 1 error and 1 warning.
