tests/snapshots/runtime_error_fixtures/indirect_call_not_callable.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/indirect_call_not_callable.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 17] Compiling  Assert
[ 2 of 17] Compiling  Debug
[ 3 of 17] Compiling  Array
[ 4 of 17] Compiling  List
[ 5 of 17] Compiling  Either
[ 6 of 17] Compiling  Eq
[ 7 of 17] Compiling  IO
[ 8 of 17] Compiling  Math
[ 9 of 17] Compiling  Num
[10 of 17] Compiling  Numeric
[11 of 17] Compiling  Option
[12 of 17] Compiling  Ord
[13 of 17] Compiling  Primops
[14 of 17] Compiling  Semigroup
[15 of 17] Compiling  Show
[16 of 17] Compiling  String
• 1 error • examples/runtime_errors/indirect_call_not_callable.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `f`.

  examples/runtime_errors/indirect_call_not_callable.flx:3:19
  |
3 |     let ignored = f(2)
  |                   ^^^^
  |                   ---- this argument has type `(Int) -> _ with |_`

  |                   ---- this call argument produces the conflicting type

Note:
  expected argument type: Int
  found argument type: (Int) -> _ with |_
  the actual argument type is inferred from this expression
  the actual argument type is inferred from this expression

Help:
  Pass a `Int` value as the 1st argument.
